[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/ORIOND.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://student_profile.gd" type="Script" id=2]
[ext_resource path="res://gender.tres" type="ButtonGroup" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[node name="student_profile" type="Node2D"]
script = ExtResource( 2 )

[node name="bg" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1024, 768 )
color = Color( 0.168627, 0.176471, 0.231373, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="label_student_profile" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 273.0
margin_top = 57.0
margin_right = 666.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "STUDENT PROFILE"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Cancel2" type="Button" parent="."]
margin_left = 731.0
margin_top = 55.0
margin_right = 865.0
margin_bottom = 95.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = SubResource( 5 )
text = "Edit Profile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_stud_fname" type="Label" parent="."]
margin_left = 119.0
margin_top = 157.0
margin_right = 319.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 2 )
text = "First Name : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_stud_lname" type="Label" parent="label_stud_fname"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 86.0
margin_right = 200.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
text = "Last Name : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_stud_middle" type="Label" parent="label_stud_fname"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 37.0
margin_right = 200.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "Middle Name : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="student_fname" type="LineEdit" parent="label_stud_fname"]
margin_left = 222.0
margin_top = -6.0
margin_right = 747.0
margin_bottom = 24.0
rect_min_size = Vector2( 525, 0 )
custom_fonts/font = SubResource( 3 )
text = "Tyler Bert"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="student_lname" type="LineEdit" parent="label_stud_fname"]
margin_left = 222.0
margin_top = 90.0
margin_right = 747.0
margin_bottom = 120.0
rect_min_size = Vector2( 525, 0 )
custom_fonts/font = SubResource( 3 )
text = "Baring"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="student_mname" type="LineEdit" parent="label_stud_fname"]
margin_left = 222.0
margin_top = 41.0
margin_right = 747.0
margin_bottom = 71.0
rect_min_size = Vector2( 525, 0 )
custom_fonts/font = SubResource( 3 )
text = "Nuer"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_bday" type="Label" parent="."]
margin_left = 119.0
margin_top = 300.0
margin_right = 319.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 2 )
text = "Birthday : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="month" type="OptionButton" parent="label_bday"]
margin_left = 222.0
margin_top = -6.0
margin_right = 279.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="date" type="OptionButton" parent="label_bday"]
margin_left = 289.0
margin_top = -6.0
margin_right = 351.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "31"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="year" type="OptionButton" parent="label_bday"]
margin_left = 361.0
margin_top = -6.0
margin_right = 444.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "2001"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_age" type="Label" parent="."]
margin_left = 644.0
margin_top = 300.0
margin_right = 700.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 2 )
text = "Age : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="age" type="SpinBox" parent="label_age"]
margin_left = 71.0
margin_top = -6.0
margin_right = 222.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
min_value = 10.0
max_value = 60.0
value = 18.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gender" type="Label" parent="."]
margin_left = 230.0
margin_top = 348.0
margin_right = 319.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 2 )
text = "Gender : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="male" type="CheckBox" parent="gender"]
margin_left = 109.0
margin_top = -6.0
margin_right = 209.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 4 )
disabled = true
pressed = true
group = ExtResource( 3 )
text = "Male"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="female" type="CheckBox" parent="gender"]
margin_left = 214.0
margin_top = -6.0
margin_right = 314.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 4 )
disabled = true
group = ExtResource( 3 )
text = "Female"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_stud_id" type="Label" parent="."]
margin_left = 119.0
margin_top = 451.0
margin_right = 319.0
margin_bottom = 471.0
custom_fonts/font = SubResource( 2 )
text = "Student ID Number : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stud_id" type="LineEdit" parent="label_stud_id"]
margin_left = 222.0
margin_top = -6.0
margin_right = 747.0
margin_bottom = 24.0
rect_min_size = Vector2( 525, 0 )
custom_fonts/font = SubResource( 3 )
text = "201900045"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_section" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 439.0
margin_top = 499.0
margin_right = 566.0
margin_bottom = 519.0
custom_fonts/font = SubResource( 2 )
text = "Section : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="section" type="LineEdit" parent="label_section"]
margin_left = 139.0
margin_top = -6.0
margin_right = 427.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "BSCS1"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_grade" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 119.0
margin_top = 500.0
margin_right = 319.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 2 )
text = "Grade Level : "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="year_lvl" type="OptionButton" parent="label_grade"]
margin_left = 222.0
margin_top = -6.0
margin_right = 295.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="HBoxContainer" parent="."]
visible = false
margin_left = 339.0
margin_top = 567.0
margin_right = 865.0
margin_bottom = 622.0
rect_min_size = Vector2( 100, 40 )
custom_constants/separation = 326
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="buttons"]
margin_right = 100.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = SubResource( 6 )
text = "Cancel"

[node name="Save" type="Button" parent="buttons"]
margin_left = 426.0
margin_right = 526.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = SubResource( 7 )
text = "Save"
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Cancel2" to="." method="_on_Cancel2_pressed"]
[connection signal="pressed" from="buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="buttons/Save" to="." method="_on_Save_pressed"]
